--- a/css/custom.css
+++ b/css/custom.css
@@ -19,3 +19,7 @@ section.section {
     max-width: 45%;
 }
 }
+#header .header-nav-main nav > ul > li.dropdown .dropdown-menu li a.active {
+    background-color: #3079BE!important;
+    color:aliceblue!important;
+}
