--- a/css/custom.css
+++ b/css/custom.css
@@ -40,5 +40,5 @@ section.section {
     max-height: 70px;
 }
 .bg-high{
-    background-color: #da315c;
+    background-color: #ee8a32!important;
 }
