--- a/css/theme-elements.css
+++ b/css/theme-elements.css
@@ -17929,7 +17929,7 @@ html.boxed section.video > div:first-child video {
 }
 
 .word-rotator-words[class*="bg-"] {
-	background: #da315c;
+	background: #ee8a32;
 }
 
 .word-rotator-words[class*="bg-"] b {
